--- a/src/com/anbtech/webffice/css/layout.css
+++ b/src/com/anbtech/webffice/css/layout.css
@@ -53,8 +53,9 @@ body {min-width: 1400px;}
 .c_wrap .layout .nav {display: table-cell; width: 260px; vertical-align: top;}
 .c_wrap .layout .nav .inner {border: 1px solid #dde2e5; border-radius: 10px;}
 .c_wrap .layout .nav h2 {padding: 35px 30px 26px 30px;  border-bottom: 4px solid #dde2e5; color: #222; font-size: 24px;}
-.c_wrap .layout .nav ul {padding: 26px 30px 27px 30px;}
-.c_wrap .layout .nav ul li + li {margin-top: 27px;}
+.c_wrap .layout .nav h3 {padding: 15px 30px 1px 20px;  color: #222; font-size: 20px;}
+.c_wrap .layout .nav ul {padding: 16px 30px 17px 30px;}
+.c_wrap .layout .nav ul li + li {margin-top: 12px;}
 .c_wrap .layout .nav ul li a {display: block; position: relative; color: #666; font-size: 18px;}
 .c_wrap .layout .nav ul li a:hover::after {content: ""; display: block; position: absolute; right: 0px; top: 50%; transform: translateY(-50%); width: 9px; height: 15px; background: url(com/anbtech/webffice/css/images/ico_arrow_r_gray_9x15.png) no-repeat;}
 .c_wrap .layout .nav ul li a.cur {color: #222; font-weight: 700;}
